--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "resolutions": {
     "react-native": "0.74.2",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/core": "^6.4.9",
+    "@react-navigation/bottom-tabs": "7.0.0-alpha.19",
+    "@react-navigation/core": "7.0.0-alpha.15",
+    "@react-navigation/drawer": "7.0.0-alpha.17",
+    "@react-navigation/native": "7.0.0-alpha.16",
+    "@react-navigation/native-stack": "7.0.0-alpha.17",
+    "@react-navigation/routers": "7.0.0-alpha.6",
     "**/util": "~0.12.4"
   },
   "dependencies": {
