[core] add fetch support on iOS

--- a/packages/expo-modules-core/expo-module.config.json
+++ b/packages/expo-modules-core/expo-module.config.json
@@ -1,6 +1,7 @@
 {
   "platforms": ["apple", "android"],
   "apple": {
+    "modules": ["ExpoNetworkFetchModule"],
     "podspecPath": "./ExpoModulesCore.podspec"
   }
 }
